<resources>
    <string name="app_name">BusTicketSystem</string>
    <string name="todo_splash_logo">TODO</string>
    <string name="splash_screen_hello">Hello!</string>
    <string name="txt_splash_screen">If you need to get anywhere by mass transit, you need Moovit...it will open up a new world for you, even if you just travel domestically</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="hello_world">Hello World</string>
    <string name="movvit">MOVit</string>
    <string name="todo_backbtn">TODO</string>
    <string name="welcome_back">!</string>
    <string name="welcome">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_feild">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signuplink">Signup</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="accomodation">Accomodation</string>
    <string name="roll_no">Roll No.</string>
    <string name="route_no">Route No.</string>
    <string name="name">Name</string>
    <string name="hostellite">Hostellite</string>
    <string name="day_scholar">Day Scholar</string>
    <string name="john">John</string>
    <string name="john_gmail_com">abc@xyz.com</string>
    <string name="_11">11</string>
    <string name="_20f_xxxx">20F-XXXX</string>
    <string name="pw">*********</string>
    <string name="take_picture">Add Picture</string>
    <string name="scroll_view_content_description">scroll_view_content_description</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_an_one_time_otp_on_this_given_mobile_number">We will send you an one time OTP on this given mobile number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="_3238567458">3238567458</string>
    <string name="_92">+92</string>
    <string name="please_enter_the_otp_sent_to_you">Please enter the OTP sent to you</string>
    <string name="resend_otp_again">Resend OTP again</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="your_generated_qr_is">Your generated QR is:</string>
</resources>
