<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/splashscreenlogo"
        android:layout_width="286dp"
        android:layout_height="241dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/logo1"
        android:contentDescription="@string/todo_splash_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/company_name"
        android:layout_width="136dp"
        android:layout_height="57dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/movvit"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splashscreenlogo" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/round_btn"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        android:onClick="NavigateToLogInScreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splashscreentxt2" />

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="169dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_btn"
        android:text="@string/signup"
        android:onClick="NavigateToSignUpScreen"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbtn" />

    <TextView
        android:id="@+id/splashscreentxt2"
        android:layout_width="281dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/txt_splash_screen"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company_name" />

</androidx.constraintlayout.widget.ConstraintLayout>