<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signupconstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signuplinear"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/black"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/scrollsignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton2"
            android:layout_width="70dp"
            android:layout_height="61dp"
            android:clickable="true"
            android:contentDescription="@string/todo_backbtn"
            android:onClick="NavigateToSplashscreen"
            app:backgroundTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_button" />

        <TextView
            android:id="@+id/signuptxt"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.622" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:id="@+id/scrollsignup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/scroll_view_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signuplinear">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintscroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/pictureLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/profilePictureImageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/circle_background"
                    android:src="@drawable/default_profile_picture" />

                <Button
                    android:id="@+id/cameraButton"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:onClick="TakePicture"
                    android:layout_marginStart="155dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/round_btn"
                    android:text="@string/take_picture"
                    android:textColor="@color/white" />

            </LinearLayout>

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="354dp"
                android:layout_height="53dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:background="@drawable/edittxt_bg"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/john"
                android:inputType="text"
                android:paddingStart="20dp"
                android:textColorHint="#546E7A"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.326"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nametxt"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/nametxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/name"
                android:textColor="#B5B2B2"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.07"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pictureLayout" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="354dp"
                android:layout_height="53dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:background="@drawable/edittxt_bg"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/john_gmail_com"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:textColorHint="#546E7A"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.295"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailtxt"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/rollnotxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/roll_no"
                android:textColor="#B5B2B2"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.062"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

            <EditText
                android:id="@+id/rollnoEditText"
                android:layout_width="165dp"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/edittxt_bg"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/_20f_xxxx"
                android:inputType="text"
                android:paddingStart="20dp"
                android:textColorHint="#546E7A"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rollnotxt"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/routenotxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/route_no"
                android:textColor="#B5B2B2"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toEndOf="@+id/rollnotxt"
                app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

            <EditText
                android:id="@+id/routenoEditText"
                android:layout_width="163dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:background="@drawable/edittxt_bg"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/_11"
                android:inputType="text"
                android:paddingStart="20dp"
                android:textColorHint="#546E7A"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintStart_toEndOf="@+id/rollnoEditText"
                app:layout_constraintTop_toBottomOf="@+id/routenotxt"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/passwordtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:textColor="#B5B2B2"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.064"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/routenoEditText" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="354dp"
                android:layout_height="53dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="12dp"
                android:autofillHints=""
                android:background="@drawable/edittxt_bg"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/pw"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:textColorHint="#546E7A"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.307"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordtxt"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/confirmpwtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/confirm_password"
                android:textColor="#B5B2B2"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.089"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

            <EditText
                android:id="@+id/confirmpwEditText"
                android:layout_width="354dp"
                android:layout_height="53dp"
                android:layout_marginTop="4dp"
                android:autofillHints=""
                android:background="@drawable/edittxt_bg"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/pw"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:textColorHint="#546E7A"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.318"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmpwtxt"
                tools:ignore="DuplicateSpeakableTextCheck,RtlSymmetry" />

            <RadioGroup
                android:id="@+id/accommodationRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.512"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmpwEditText">

                <RadioButton
                    android:id="@+id/dayScholarRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_scholar"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/hostelliteRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/hostellite"
                    tools:ignore="TouchTargetSizeCheck" />
            </RadioGroup>

            <Button
                android:id="@+id/signupButton"
                android:layout_width="159dp"
                android:layout_height="59dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/round_btn"
                android:text="@string/signup"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/accommodationRadioGroup" />

            <TextView
                android:id="@+id/emailtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textColor="#B5B2B2"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.059"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>